objects/maps__ArcGISBatchPushTest__c.object
<CustomObject>
    <fields>
        <fullName>maps__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RecordId__c</fullName>
        <label>RecordId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Result__c</fullName>
        <label>Result</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Maps ArcGIS Batch Push Test</label>
    <nameField>
        <label>Maps ArcGIS Batch Push Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps ArcGIS Batch Push Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>